--- a/lista 1..ipynb
+++ b/lista 1..ipynb
@@ -172,27 +172,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "****\n",
-      "****\n",
-      "****\n",
-      "****\n",
+      "*****\n",
+      "*****\n",
+      "*****\n",
+      "*****\n",
+      "*****\n",
       "None\n"
      ]
     }
    ],
    "source": [
-    "n=4\n",
-    "def kwadrat():\n",
+    "def kwadrat(n):\n",
     "    for x in range(n):\n",
     "        print (\"*\"*n) \n",
-    "print(kwadrat())"
+    "print(kwadrat(5))"
    ]
   },
   {
